package BlackJack.model;


/**
 * Created by Jonas Sjöberg (js224eh) on 2017-10-27.
 */
public interface ICardDealtObserver
{
    void CardDealt();
}
